--- a/Card.css
+++ b/Card.css
@@ -2,7 +2,7 @@
     width: 300px ;
     display: flex;
     flex-direction: column;
-    margin: 10px 0px;
+    margin: 10px 0px 0px 0px;
 
 }
 .inCardDiv{
@@ -46,11 +46,51 @@ p{
     justify-content: center;
 }
 
+.hiddenDiv{
+    width:100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 0px;
+    opacity: 0;
+    transition: 200ms;
+    
+}
+.newField{
+    width:100%;
+    display: flex;
+    justify-content: center;
+    font-family: 'Comfortaa', cursive;
+    font-weight: 700;
+    margin-top: 7px;
+}
+
+.newFieldSpan{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#newFieldName{
+    width: 60%;
+}
+#newFieldValue{
+    width: 30%;
+}
+.visible{
+    height: 70px;
+    opacity: 1;
+    transition: 200ms ease-in;
+}
+
 @media (max-width: 770px) {
     .cardDiv{
         max-width: 100% ;
         display: flex;
         flex-direction: column;
+        border-bottom: 4px dotted rgb(240, 240, 240);
+        padding-bottom: 10px;
     
     }
   }
