--- a/index.css
+++ b/index.css
@@ -1,10 +1,11 @@
+
+/* Основная ДИВка для карточек */
 #mainDiv{
     width: 1024px; 
     display: flex;
-    
-    justify-content: space-around;
-
+    justify-content: space-between;
 }
+
 body{
     width:100%;
     display: flex;
@@ -13,6 +14,7 @@ body{
     margin: 0px 0px;
     flex-wrap: wrap;
 }
+
 header{
     width: 100%;
     display: flex;
@@ -20,20 +22,22 @@ header{
     align-items: center;
 
 }
+/* Дивка для шапки */ 
 .headerDiv{
     border-bottom: 4px dotted rgb(240, 240, 240);
     height: 50px;
     width: 1024px;
 }
+
+
+
     
 
 
 @media (max-width: 770px) {
     #mainDiv{
         max-width: 90%; 
-
         display: flex;
-        
         justify-content: space-around;
         flex-wrap: wrap;
     
