--- a/Card.css
+++ b/Card.css
@@ -1,3 +1,4 @@
+ /* DIV внутри которой строится каждая карточка */ 
 .cardDiv{
     width: 300px ;
     display: flex;
@@ -5,6 +6,8 @@
     margin: 10px 0px 0px 0px;
 
 }
+
+/* общий класс для флекс элементов в каждой карточке */
 .inCardDiv{
     width: 100%;
     display: flex;
@@ -17,10 +20,13 @@
     font-weight: 700;
     
 }
+
 img{
     object-fit: contain;
     height: 50px;
 }
+
+/* надписи крупным шрифтом внутри карточки */
 .descriptionClass{
     width: 100%;
     display: flex;
@@ -29,16 +35,20 @@ img{
     font-family: 'Comfortaa', cursive;
     font-weight: 700;
     font-size: 24px;
-
 }
+
+/* название карточки */
 #pCardName{
-    
     margin: 10px 0px
 }
+
+/* дивка для картинки */
 #funnyPicture{
     height: 300px;
     object-fit: cover;
 }
+
+
 p{
     width: 100%;
     display: flex;
@@ -46,6 +56,7 @@ p{
     justify-content: center;
 }
 
+/* дополнительная информация в скрытой дивке */
 .hiddenDiv{
     width:100%;
     display: flex;
@@ -59,6 +70,55 @@ p{
     transition-delay: 0ms, 200ms;
     
 }
+
+/* контейнер-кнопка для стрелочки и дивки с доп. информацией */ 
+.additionalContainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* спан из которого сделана стрелочка */
+.additionalInfSpan{
+   height: 8px;
+   width: 15px;
+   display: block;
+   position: relative;
+ }
+
+
+.additionalInfSpan:after,.additionalInfSpan:before{
+    content:'';   
+    height: 2px;
+    width: 50%;
+    background-color: black;
+    position: absolute;
+    border-radius: 1px;
+}
+
+.additionalInfSpan:after{
+    transform: rotate(30deg);
+    transition: 300ms ease;
+    
+}
+
+.additionalInfSpan:before{
+    transform: rotate(-30deg);
+    left: 5px;
+    transition: 300ms ease;
+}
+
+.additionalInfSpan.active:after{
+    transform: rotate(-30deg);
+    transition: 300ms ease;
+}
+
+.additionalInfSpan.active:before{
+    transform: rotate(30deg);
+    left: 5px;
+    transition: 300ms ease;
+}
+
 .newField{
     width:100%;
     display: flex;
@@ -77,9 +137,11 @@ p{
 #newFieldName{
     width: 60%;
 }
+
 #newFieldValue{
     width: 30%;
 }
+
 .visible{
     height: 70px;
     opacity: 1;
@@ -90,7 +152,7 @@ p{
 
 @media (max-width: 770px) {
     .cardDiv{
-        max-width: 100% ;
+        width: 100% ;
         display: flex;
         flex-direction: column;
         border-bottom: 4px dotted rgb(240, 240, 240);
