--- a/Card.css
+++ b/Card.css
@@ -126,7 +126,8 @@ p{
     font-family: 'Comfortaa', cursive;
     font-weight: 700;
     margin-top: 7px;
-    font-size: 14px;
+    font-size: 12px;
+    color: #474747;
 }
 
 .newFieldSpan {
