--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
     width: 1024px; 
     display: flex;
     justify-content: space-between;
+    margin-top: 50px;
 }
 
 body {
@@ -20,6 +21,8 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    top: 0px;
 
 }
 /* Дивка для шапки */ 
@@ -29,7 +32,30 @@ header {
     width: 1024px;
 }
 
+footer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+#footerDiv {
+    width: 1024px;
+    height: 70px;
+    color: rgb(46, 46, 46);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 4px dotted rgb(240, 240, 240);
+    font-family: 'Comfortaa', cursive;
+    font-weight: 700;
+    z-index: 10;
+    margin-top: 20px;
+}
+#footerDiv > a {
+    text-decoration: none;
+    color: rgb(231, 231, 231);
+}
     
 
 
@@ -43,6 +69,16 @@ header {
     }
     .headerDiv {
         max-width: 90%;
+    }
+
+    #footerDiv {
+        width: 90%;
+        height: 50px;
+        color: rgb(46, 46, 46);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: none;
     }
         
   }
