--- a/index.css
+++ b/index.css
@@ -74,12 +74,13 @@ footer {
 
     #footerDiv {
         width: 90%;
-        height: 50px;
+        height: 60px;
         color: rgb(46, 46, 46);
         display: flex;
         justify-content: center;
         align-items: center;
         border: none;
+        margin-top: 10px;
     }
         
   }
